<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pop_up_bg"
    android:orientation="vertical" 
    android:id="@+id/shareLayout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:background="@color/pop_up_bg"
            android:text="@string/cancel"
            android:textColor="@color/blue_txt"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cancel"
            android:layout_alignBottom="@+id/cancel"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/share_your_story_running"
            android:textSize="20sp" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="8dp"
            android:background="@color/pop_up_bg"
            android:text="@string/send"
            android:textColor="@color/blue_txt"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <EditText
        android:id="@+id/shareText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/share_text"
        android:inputType="textMultiLine" 
        android:background="@android:color/transparent"
        >

        <requestFocus />
    </EditText>
   <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
    <EditText
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/name" 
        android:singleLine="true"
        android:background="@android:color/transparent"
        >
    </EditText>
   <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
    <EditText
      
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:background="@android:color/transparent"
          android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
   <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <EditText
        android:id="@+id/location"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/location"
        android:singleLine="true"
        android:background="@android:color/transparent"
         />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        >
        <CheckBox

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rememberMe"
            />


        <EditText
            android:id="@+id/rememberMeText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/remember_me"
            android:inputType="textMultiLine"
            android:background="@android:color/transparent"
            android:editable="false"
            android:focusable="false"
            />

    </LinearLayout>
</LinearLayout>