<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/singleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/select"
                android:text="@string/single"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/multipleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/de_select"
                android:text="@string/multiple"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/singleLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
             android:visibility="gone"
             >

            <Button
                android:id="@+id/singleAct"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ocde_icon"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/one_tap_one_act"
                android:textColor="@color/one_tap_color"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/multipleLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/multipleCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="1000"
                android:textColor="@color/gray"
                android:textSize="35sp" />


            <me.angrybyte.circularslider.CircularSlider
                android:id="@+id/circular"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:padding="20dp"

                android:background="@drawable/ocde_icon_circular"
                />
            <Button
                android:id="@+id/sButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/submit"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

        <RelativeLayout
            android:id="@+id/thanksLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
             android:visibility="gone"
            >
 			 <ImageView
            android:id="@+id/confettiImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        
            android:scaleType="centerCrop" />
            <LinearLayout
                android:id="@+id/backButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_alignParentTop="true"
                 >

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/back"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <TextView
                android:id="@+id/thanksText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/thanks"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="4"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:textStyle="bold" 
                 android:layout_below="@+id/backButtonLayout"
                />

            <Button
                android:id="@+id/shareImage"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ocde_icon"
                android:gravity="center"
                android:layout_below="@+id/thanksText" 
                 />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/submit"
                android:gravity="center"
                android:text="@string/share_your_story"
                android:textColor="@color/white"
                android:textSize="22sp" 
                 android:layout_below="@+id/shareImage"
                />
        </RelativeLayout>
    
    
  

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/splash_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="8dp"
            android:text="@string/learn_more"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/group"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/group" />
    </RelativeLayout>

</RelativeLayout>